move the character

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section>
         <h1>Catch the mouse</h1>
-        <canvas class="myCanva" width="400" height="550"></canvas>
+        <canvas class="mouse-canvas" width="400" height="550"></canvas>
     </section>
 
 
