new structure for waste

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <canvas class="mouse-canvas" width="400" height="550"></canvas>
     </section>
 
-
+    <script src="./js/waste.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
