create game over after 3 collisions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </section>
 
     <script src="./js/waste.js"></script>
+    <script> src="./js/bullets.js"</script>
     <script src="./js/script.js"></script>
 </body>
 </html>
