--- a/index.html
+++ b/index.html
@@ -14,12 +14,28 @@
         <h1>Catch the mouse</h1>
 
         <div class="starter-text">
-            <p>Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent.</p>
+            <p>Living in Paris can be quite an adventure. Sometimes you get robbed in the subway, sometimes a pigeon flies in your face, and sometimes you discover there is a mouse in your trash. Don't panic, it could be worse, it could be a rat!</p>
+            <p>All you have to do it's to catch it, and maybe after all, a new adventure could start, think about Ratatouille!
+            </p>
+            <img src="./images/mouse.png"/>
         </div>
 
-        <button class="start-btn">START</button>
+        <button class="start-btn">Start</button>
 
         <canvas class="mouse-canvas hide" width="400" height="550"></canvas>
+
+        <div class="game-over hide">
+            <p>LOOSE <br/>Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent.</p>
+        </div>
+
+        <button class="replay-btn hide">Replay</button>
+
+        <div class="win hide">
+            <p>WIN <br/>Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent.</p>
+        </div>
+
+        <button class="win-btn hide">Replay</button>
+
     </section>
 
     <script src="./js/jquery-2.1.4.js"></script>
