--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <div class="starter-text">
             <p>Living in Paris can be quite an adventure. Sometimes you get robbed in the subway, sometimes a pigeon flies in your face, and sometimes you discover there is a mouse in your trash. Don't panic, it could be worse, it could be a rat!</p>
-            <p>All you have to do it's to catch it, and maybe after all, a new adventure could start, think about Ratatouille!
+            <p>All you have to do is catch it, and maybe after all, a new adventure could start, think about Ratatouille!
             </p>
-            <img src="./images/mouse.png"/>
+            <img src="./images/mouse.svg" width="101" height="64"/>
         </div>
 
         <button class="start-btn">Start</button>
@@ -25,13 +25,14 @@
         <canvas class="mouse-canvas hide" width="400" height="550"></canvas>
 
         <div class="game-over hide">
-            <p>LOOSE <br/>Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent.</p>
+            <p>YOU LOOSE!<br/>You are buried under the rubbish and the mouse dances on you!</p>
         </div>
 
         <button class="replay-btn hide">Replay</button>
 
         <div class="win hide">
-            <p>WIN <br/>Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent.</p>
+            <p>YOU WIN!<br/>You catch the mouse and she was so clever she's now you're BFF!</p>
+            <img src="./images/win-img.svg" width="231" height="210"/>
         </div>
 
         <button class="win-btn hide">Replay</button>
