--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <canvas class="mouse-canvas hide" width="400" height="550"></canvas>
 
         <div class="game-over hide">
-            <p>YOU LOOSE!<br/>You are buried under the rubbish and the mouse dances on you!</p>
+            <p>YOU LOSE!<br/>You are buried under the rubbish and the mouse dances on you!</p>
         </div>
 
         <button class="replay-btn hide">Replay</button>
