add animation and graphic improvement

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         <canvas class="mouse-canvas hide" width="400" height="550"></canvas>
 
         <div class="game-over hide">
-            <p>YOU LOSE!<br/>You are buried under the rubbish and the mouse dances on you!</p>
+            <h3>YOU LOSE!</h3>
+            <p>You are buried under the rubbish and the mouse dances on you!</p>
+            <img src="./images/lose-img.svg" width="231" height="210"/>
         </div>
 
         <button class="replay-btn hide">Replay</button>
 
         <div class="win hide">
-            <p>YOU WIN!<br/>You catch the mouse and she was so clever she's now you're BFF!</p>
+            <h3>YOU WIN!</h3>
+            <p>You catch the mouse and she was so clever she's now you're BFF!</p>
             <img src="./images/win-img.svg" width="231" height="210"/>
         </div>
 
